fix to prevent unnecessary scrollbar in layer

--- a/src/frontend/src/components/layer/layer.less
+++ b/src/frontend/src/components/layer/layer.less
@@ -21,7 +21,7 @@
             display: block;
             height: 20px;
             width: 20px;
-            cursor: pointer;    
+            cursor: pointer;
         }
 
         &.small {
@@ -53,16 +53,16 @@
 .layer {
         margin: 0 auto @xxl-stack auto;
         max-width: 100vw;
-        padding: @l-stack @s-stack; 
-        background-color: @s2-white;   
+        padding: @l-stack @s-stack;
+        background-color: @s2-white;
         height: 90vh;
-        overflow: scroll;
+        overflow: auto;
         position: relative;
         z-index: 2;
 
         @media (min-width: @tablet-portrait-up) {
             max-width: @layer-width;
             padding: @xxl-stack @3xl-stack;
-            height: 80vh; 
-        }       
+            height: 80vh;
+        }
 }
